[package]
name = "mulstant"
description = "A simple multi-timer utility for recording multiple durations between events in Rust"
license = "MIT"
authors = ["MincoMK <mail@drchi.co.kr>"]
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
